FIX: some alignment

--- a/components/home/technologyStack/style.module.scss
+++ b/components/home/technologyStack/style.module.scss
@@ -61,10 +61,12 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 65.75rem;
+    width: 60vw;
     z-index: 1;
+
     .careerRow {
       text-align: center;
+
       .ProjectHighlight {
         font-size: text(normal);
         font-weight: 700;
@@ -96,11 +98,14 @@
       }
       .partnerCounter {
         display: flex;
-        justify-content: center;
         align-items: center;
+        justify-content: center;
         gap: 5rem;
         margin-bottom: 3.75rem;
+
         .counterCard {
+          width: 136px;
+
           .counts {
             font-size: text(xl);
             font-weight: 500;
